--- a/s.css
+++ b/s.css
@@ -1,5 +1,25 @@
 .box1{
+    width: 100%;
+    height: 100%;
+    border: 5px solid red;
+    overflow:auto
+}
+.box2{
+    width: 99.4%;
+    height: 200px;
+    border: 5px solid rgb(0, 255, 76);
+    float:left
+}
+.box3{
     width: 300px;
     height: 500px;
-    border: 5px solid red;
+    border: 5px solid rgb(0, 17, 255);
+    float:left
 }
+.box4{
+    width: 79%;
+    height: 500px;
+    border: 5px solid rgb(255, 0, 170);
+    float:left
+}
+
